src/test/ui/pub/pub-restricted-error-fn.rs
pub(crate) () fn foo() {} //~ unmatched visibility
//~^ ERROR expected item, found `(`
